# store-package

./: .coverage  README.md  enunciado.md  pyproject.toml
src/store/: __init__.py  store.py
src/store/data/: store.txt
tests/: test_store.py
tests/test_files/: store1.txt  store2.txt
