[project]
name = "store_package"
version = "0.0.1"
authors = [
  { name="Alejandro de Cora", email="alejandrodecora@gmail.com" },
]
description = "Máster Big Data, & Data Engineering, ejercicio paquete y tests"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "pytest-datafiles>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.package-data]
store = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "src"
addopts = "--verbose --cov=store --cov-report html"
